src/network-policy-default-allow-hello-node.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default.allow-hello-node
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-node
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hello-node
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: hello-node
  policyTypes:
    - Ingress
    - Egress
